@@ -1,3 +1,9 @@
+2008-09-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/spellcheck.c:
+   Update to Geany API 94 and use new indicator API.
+
+
 2008-09-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/spellcheck.c:
